fixed table width, and page width overflowing issues

--- a/client/src/styling/main.css
+++ b/client/src/styling/main.css
@@ -53,6 +53,9 @@
 .kjga-display-block {
     display: block;
     top: 80px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -83,4 +86,10 @@
 }
 th.paymentTable {
     width: 150px;
+}
+
+.table-wrapper {
+    max-height: 600px;
+    overflow-x: scroll;
+    padding: 20px 0;
 }
